--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
@@ -29,8 +29,11 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="quotes.js"></script>
     <script src="script.js"></script>
+    <!-- <script src="script2.js"></script> -->
 </body>
 </html>
